# Boticario

./: .env.docker  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  makefile  pyproject.toml
.github/workflows/: check.yml  release.yml  test.yml
backend/: app.py  dependencies.py  gunicorn.py
backend/api/: auth.py  health_check.py
backend/api/v1/: __init__.py  cashback.py  sales.py  seller.py
backend/core/: config.py
backend/core/controller/: __init__.py  cashback.py  sale.py  seller.py
backend/core/helpers/: constants.py  database.py  date.py  documents.py  exceptions.py  logger.py
backend/core/models/: __init__.py  auth.py  cashback.py  sale.py  seller.py
backend/core/security/: authorization.py  hash.py
backend/core/services/: __init__.py
backend/core/services/cashback/: __init__.py
migration/: env.py
migration/versions/: 9db77931c84e_.py
tests/: conftest.py
tests/api/: test_authorization.py  test_health_check.py
tests/api/v1/: test_cashback.py  test_sale.py  test_seller.py
tests/core/controller/: test_cashback.py  test_sale.py  test_seller.py
tests/core/helpers/: test_constants.py  test_date.py  test_documents.py  test_exceptions.py
tests/core/models/: sale.py  test_sale.py  test_seller.py
tests/core/security/: test_authorization.py  test_hash.py
tests/factories/: sale.py  seller.py
